--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mongoose": "^4.12.0",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
-    "passport-jwt": "^3.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-jwt": "^2.0.0"
   }
 }
